syntax = "proto3";

package proto;

service UserService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {}
}

message CreateUserRequest {
  string username = 1;
  string password = 2;
  string name = 3;
  string surname = 4;
  string role = 5;
}

message CreateUserResponse {
  // Define any response fields, if needed
}